# algorithm_engineering

./: VL4 Benchmarking.xlsx  Vorlesung 1 - Exam Assignments.docx  Vorlesung 2 - Exam Assignments.docx  Vorlesung 3 - Exam Assignments.docx  Vorlesung 4 - Exam Assignments.docx  Vorlesung 6 - Exam Assignments.docx
coding_warmup_2/: CMakeLists.txt  main.cpp
coding_warmup_2a/: CMakeLists.txt  main.cpp
fizzbuzz/: CMakeLists.txt  catch_tests_fizzbuzz.cpp  main.cpp
fizzbuzz/fizzbuzz/: CMakeLists.txt
fizzbuzz/fizzbuzz/include/: fizzbuzz.h
fizzbuzz/fizzbuzz/src/: fizzbuzz.cpp
modified_parallel_pi_monte_carlo/: CMakeLists.txt  main.cpp
numerical_integration_pi/: CMakeLists.txt  main.cpp
parallel_pi_monte_carlo/: CMakeLists.txt  main.cpp
